<resources>

    <!-- Main strings -->
    <string name="app_name">CourseBuddy</string>

    <!-- Opening Menu strings -->
    <string name="continueCurrent">Continue</string>
    <string name="startNewSemester">New Semester</string>
    <string name="showHistory">History</string>

    <!-- Search Strings -->
    <string name="search">Search</string>
    <string name="content_description_search">Search...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home strings -->
    <string name="home">Home</string>
    <string name="content_description_home">Needs to Change</string>
    <string name="image_description_courses">Course Buddy icon</string>
    <string name="image_description_semester">Semester Icon</string>

    <!-- Favourites strings -->
    <string name="favorite">Favourites</string>
    <string name="content_description_favorite">content description</string>

    <!-- More strings  -->
    <string name="more">More what?</string>
    <string name="content_description_more">Describe more of more</string>

    <!--  -->
    <string name="contacts">Contacts</string>
    <string name="contacts_description">Your contacts are here!</string>
    <string name="menu_item"></string>
</resources>